# security-ai-agent

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
examples/: dashboard_demo.py
examples/output/: combined_llm.json  combined_llm.md  sample_audit.json  sample_combined.json  sample_combined2.json  sample_pip_only.json  stored_scan.json  summary_comparison.csv  test_scan.json
secagent/: agent.py
secagent/dashboard/: app.py
secagent/dashboard/static/css/: dashboard.css
secagent/dashboard/templates/: base.html  dashboard.html  scans.html  trends.html
secagent/database/: database.py  models.py  repository.py
secagent/scoring/: __init__.py  risk_calculator.py
secagent/summarizers/: base.py  openai_summarizer.py
secagent/tools/: bandit_scan.py  compare_summaries.py  pip_audit.py
security_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
