[project]
name = "security-ai-agent"
version = "0.1.0"
description = "Security AI Agent: orchestrates scanners and summarizes findings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pip-audit>=2.7.3"
]

[project.scripts]
sec-agent = "secagent.agent:app"
