[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-ai-agent"
version = "0.1.0"
description = "Security AI Agent: orchestrates scanners and summarizes findings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pip-audit>=2.7.3",
  "bandit>=1.7.9",
  "sqlalchemy>=2.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.6"
]

[tool.setuptools.packages.find]
include = ["secagent*"]

[project.scripts]
sec-agent = "secagent.agent:app"

[project.optional-dependencies]
llm = [
  "openai>=1.40.0",
  # "anthropic>=0.34.0"  # enable later if you want Claude
]
